Squashed commit of the following:
commit f29facaf110f7fdefd9efabffc93048a6f69d197
Merge: 67017a8 22827b7
Author: Lesia Soloviova <106915140+LesiaUKR@users.noreply.github.com>
Date:   Wed Oct 25 19:21:06 2023 +0300

    Merge pull request #20 from LesiaUKR/feature/auth_v10

    add endpoint /users/changeData, created dowload file, update field na…

commit 22827b78de1d375e03210b73ab4655fc77eb526c
Author: Serhii Ozeran <ozeransm@gmail.com>
Date:   Wed Oct 25 02:09:42 2023 +0300

    add endpoint /users/changeData, created dowload file, update field name of user

commit 67017a810bef6d4e865545d4937f3eb20a8c39bf
Merge: dbeb6ca 85ea2c3
Author: Lesia Soloviova <106915140+LesiaUKR@users.noreply.github.com>
Date:   Tue Oct 24 21:13:00 2023 +0300

    Merge pull request #19 from LesiaUKR/feature/filters

    exrcises docs

commit 85ea2c3b2235ae6819b8dbea2f561991fec9dd00
Author: fxxwol <protsivroksolana2004@gmail.com>
Date:   Tue Oct 24 21:03:25 2023 +0300

    exrcises docs

commit dbeb6ca292778508ecd3043def83bae4af6e1479
Author: Your Name <solovyova.lesya@gmail.com>
Date:   Tue Oct 24 20:57:06 2023 +0300

    deleted midleware folder
